# src/common/apis/numbat/types.ts
@@ -353,19 +353,6 @@ export type PrerecordingsEventStartUploadErrors = {
         }
       | Array<unknown>;
   };
-  /**
-   * Not Found Exception
-   */
-  404: {
-    status_code: number;
-    detail: string;
-    extra?:
-      | null
-      | {
-          [key: string]: unknown;
-        }
-      | Array<unknown>;
-  };
 };
 
 export type PrerecordingsEventStartUploadError =
@@ -416,19 +403,6 @@ export type PrerecordingsEventListErrors = {
    * Validation Exception
    */
   400: {
-    status_code: number;
-    detail: string;
-    extra?:
-      | null
-      | {
-          [key: string]: unknown;
-        }
-      | Array<unknown>;
-  };
-  /**
-   * Not Found Exception
-   */
-  404: {
     status_code: number;
     detail: string;
     extra?:
